resolve flash card link contrast issue in rgbo theme. *Accessibility

--- a/themes/Nottingham/rgbo/rgbo.css
+++ b/themes/Nottingham/rgbo/rgbo.css
@@ -102,6 +102,9 @@
   border: #117BAD;
   color: #ffffff; }
 
+.back.panel a {
+  color: #ffffff; }
+
 .x_links_page #linkHolder a {
   color: blue; }
 
