--- a/themes/Nottingham/rgbo/scss/_pagetypes.scss
+++ b/themes/Nottingham/rgbo/scss/_pagetypes.scss
@@ -94,6 +94,9 @@
   border:$contrastcolor;
   color:$fontcolorforcontrastcolor;
 }
+.back.panel a{
+  color:$whiteorlightest;
+}
 //*****hyperlinks******/
 .x_links_page #linkHolder a{
   color:$linkcolor;
